--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -53,7 +53,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../NetrunningDeck.exe"
+export_path="../NetArchGenerator.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -78,7 +78,7 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon="uid://d3hi0bv6k6cu"
+application/icon="uid://d33vi4g5snwad"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
